[package]
name = "jikyuu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.17"
chrono = "0.4.19"
clap = "2.33.3"
anyhow = "1.0.38"
regex = "1.4.5"
prettytable-rs = "0.8.0"
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }
