[package]
name = "jikyuu"
description = "Estimate the amount of time you've spent working on a Git repository"
version = "0.1.1"
edition = "2018"
authors = ["Ruin0x11 <nonbirithm@fastmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Ruin0x11/jikyuu"
repository = "https://github.com/Ruin0x11/jikyuu"
keywords = ["cli", "utility", "git"]
categories = ["command-line-utilities"]

[dependencies]
git2 = "0.13.17"
chrono = "0.4.19"
clap = "2.33.3"
anyhow = "1.0.38"
regex = "1.4.5"
prettytable-rs = "0.8.0"
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }
